@@ -1,3 +1,6 @@
+- XFdrake:
+  o when setting background for the resolution, handle "hour"-based backgrounds
+
 Version 0.46 - 18 February 2008
 
 - XFdrake:
